searching with api

--- a/examples/testing.ipynb
+++ b/examples/testing.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# Chat Models\n",
     "from huggingface_hub import hf_hub_download\n",
@@ -25,6 +34,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = get_filenames_in_directory('../collection/examples/processed/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ponds3'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[0].partition('.grobid')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ponds3.grobid.tei.xml',\n",
+       " 'lakes3.grobid.tei.xml',\n",
+       " 'lakes2.grobid.tei.xml',\n",
+       " 'fake1.grobid.tei.xml',\n",
+       " 'ponds2.grobid.tei.xml',\n",
+       " 'fake3.grobid.tei.xml',\n",
+       " 'fake2.grobid.tei.xml',\n",
+       " 'lakes1.grobid.tei.xml',\n",
+       " 'ponds1.grobid.tei.xml',\n",
+       " 'definitions1.grobid.tei.xml',\n",
+       " 'definitions3.grobid.tei.xml',\n",
+       " 'definitions2.grobid.tei.xml']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33,33 +102,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "doc = XmlDocument()\n",
-    "doc.load('../papers/processed/definitions2.grobid.tei.xml', token_size = 1000)"
+    "doc = XmlDocument(doi = '1234')\n",
+    "doc.load('../collection/examples/processed/definitions2.grobid.tei.xml', token_size = 1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "## Definitions\n",
-      "'Small waterbodies' is an ambiguous term with, as yet, no universally accepted or legal definition. In this paper, we use the term to refer to ponds and small lakes, small streams including headwaters, ditches and springs. In the following section, the approaches which have been taken to derive these definitions are described.\n",
+      "# The importance of small waterbodies for biodiversity and ecosystem services: implications for policy makers\n",
+      "## Abstract\n",
+      "Small waterbodies, including ponds and small lakes, low-order streams, ditches and springs, are the most numerous freshwater environments globally, are critical for freshwater biodiversity and are increasingly recognised for their role in ecosystem service delivery. Small waters often represent the best remaining examples of intact freshwater habitats and are the most likely to remain unpolluted, often being a refuge for species which have disappeared from larger, more damaged, waterbodies. Practically all waterrelated ecosystem services are initially mediated by small waters and some, such as carbon cycling, may be dominated by them. Small waters are exposed to all the threats affecting larger waters, and some experienced only by small waters. Despite this, small waters remain the least investigated part of the water environment and are largely excluded from water management planning. We identify the priorities for research to underpin better protection of small waters and recommend policy actions needed to better integrate small waters into the management of catchments and landscapes. The primary requirements are to identify reliable monitoring programmes for small waters, develop effective measures to protect the biodiversity and ecosystem services they provide and ensure that regulators take full account of this critical part of the water environment.\n",
       "\n",
-      "## Ponds and small lakes\n",
-      "Ponds are small standing waters varying in size from 1 m 2 to about 2-5 ha in area and may be permanent or seasonal, man-made or naturally created (Pond Conservation Group, 1993;Collinson et al., 1995;Biggs et al., 2007;E.P.C.N., 2007;Cereghino et al., 2008). Although there is a long history, dating back to the nineteenth century, of attempts to define the difference between a pond and a lake (Biggs et al., 2005), large ponds and small lakes share many characteristics in terms of structure and function, and the transition zone between the two types of habitat is very gradual (Søndergaard et al., 2005;De Meester et al., 2005). Indeed, ponds merge imperceptibly into virtually all other freshwater habitat types (Biggs et al., 1997). However, for practical purposes, such as estimating waterbody numbers or comparing waterbody types, most authors have adopted a size-based classification with a size boundary somewhere between 1 and 5 ha, which can be fairly easily measured in the field (e.g. Williams et al., 2004;Kalettka & Rudat, 2006;Davies et al., 2008a, b;De Bie et al., 2008;Williams et al., 2010a). Occasionally, 'pond' studies are restricted to waters of no more than 0.5 ha (e.g. Lafitte et al., 2009) or extended to include those up to 8 m in depth or 10 ha in area (e.g. Oertli et al., 2000Oertli et al., , 2005)). The Ramsar Convention adopted a cut-off between ponds and lakes of 8 ha, although in practice this has not been widely applied by workers investigating these\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(doc.pages[1])"
+    "print(doc.title_abstract)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Springs\n",
+      "Hydrologically, springs are defined as strictly delimited places where the groundwater emerges at the surface (Cantonati et al., 2006). They can also be seen as points of natural, concentrated discharge of groundwater, at a rate high enough to maintain flow on the surface (van Everdingen, 1991). The German Institute for Norms (DIN) precisely defines a spring as a ''spatially restricted groundwater emergence, which at least temporally leads to a superficial discharge'' (DIN, 1994). This definition also includes anthropogenically modified springs such as wells. Geohydrological spring types, such as overflow springs or artesian springs, are distinguished depending on the geology and the characteristics of the aquifer (Martin et al., 2015). In general, the aquifer is the storage body of water gained by precipitation and lost by spring flow after a certain time lag (Glazier, 2014). Depending on the geology, storage times in the aquifer differ considerably from a few hours to over 10,000 years (Glazier, 2014).\n",
+      "From an ecological perspective, springs are ecotones at the interface between surface water and groundwater (Webb et al., 1998;Cantonati et al., 2006). Since the start of spring research at the beginning of the twentieth century, it has almost been a paradigm that springs are stable habitats providing the biota, such as macroinvertebrates, with relatively constant abiotic conditions (e.g. Thienemann, 1926;Nielsen, 1950). Thermal stability in particular was identified as a key factor characterising springs fed by deep groundwater (e.g. Illies, 1952;Minshall, 1968;van der Kamp, 1995). More recent spring research has revealed doubts about this apparent stability (Fischer et al., 1998;Gra ¨sle & Beierkuhnlein, 1999). However, at least for lowland springs and springs in low mountain ranges, low temperature variability indeed seems to be an indicator for separating the springhead, the actual spring, from the adjacent springbrook (Erman & Erman, 1995;Von Fumetti et al., 2007).\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doc.pages[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(doc.pages)"
    ]
   },
   {
@@ -71,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,6 +378,26 @@
     "    identifier = \"Chunk 2\",\n",
     "    ignore = ['context']\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response[\"definition_bool\"]"
    ]
   },
   {
@@ -341,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +524,7 @@
        "1     fish    NaN     toast   soup"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,6 +536,76 @@
     "     1 : {'dinner': 'fish', 'brunch': 'soup', 'breakfast': 'toast'}\n",
     "}\n",
     "pd.DataFrame.from_dict(D, orient='index')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dinner</th>\n",
+       "      <th>lunch</th>\n",
+       "      <th>breakfast</th>\n",
+       "      <th>brunch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>chicken</td>\n",
+       "      <td>salad</td>\n",
+       "      <td>eggs</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fish</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>toast</td>\n",
+       "      <td>soup</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    dinner  lunch breakfast brunch\n",
+       "0  chicken  salad      eggs    NaN\n",
+       "1     fish    NaN     toast   soup"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = [\n",
+    "    {'dinner': 'chicken', 'lunch': 'salad', 'breakfast': 'eggs'},\n",
+    "    {'dinner': 'fish', 'brunch': 'soup', 'breakfast': 'toast'}\n",
+    "]\n",
+    "pd.DataFrame(D)"
    ]
   },
   {
