--- a/examples/testing.ipynb
+++ b/examples/testing.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Chat Models\n",
     "from huggingface_hub import hf_hub_download\n",
@@ -31,6 +22,44 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lxml import etree\n",
+    "\n",
+    "filepath = \"../collection/examples/processed/ponds1.grobid.tei.xml\"\n",
+    "tree = etree.parse(filepath)\n",
+    "root = tree.getroot()\n",
+    "ns = {\n",
+    "                'tei': 'http://www.tei-c.org/ns/1.0',\n",
+    "                'xlink': 'http://www.w3.org/1999/xlink',\n",
+    "                'xsi': 'http://www.w3.org/2001/XMLSchema-instance',\n",
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root.findall('.//tei:blargus', ns)"
    ]
   },
   {
