--- a/examples/search.ipynb
+++ b/examples/search.ipynb
@@ -153,18 +153,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "9377ba08",
    "metadata": {},
    "outputs": [],
    "source": [
+    "sch = SemanticScholar()\n",
     "response = sch.search_paper(\n",
     "    query=\"\",\n",
     "    bulk = True,\n",
     "    sort='publicationDate:desc',\n",
     "    venue=['Limnology and Oceanography'],\n",
-    "    limit = 10\n",
+    "    limit=100\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0e0e1ce2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(response)"
    ]
   },
   {
