--- a/examples/results.ipynb
+++ b/examples/results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,26 +60,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Definition 2: The importance of small waterbodies for biodiversity and ecosystem services: implications for policy makers'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titles[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 88,
    "metadata": {},
    "outputs": [
@@ -98,72 +78,6 @@
     "definition_bool = title_df['definition_bool'].value_counts()\n",
     "definitions = title_df['definition'].value_counts().index\n",
     "table_bool = title_df['table_bool'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "definition_bool\n",
-       "False    12\n",
-       "True      1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "definition_bool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "table_bool\n",
-       "False    12\n",
-       "True      1\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table_bool"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Ponds are generally defined as small (1 m² to ∼50,000 m²) shallow, standing water bodies that can either permanently or temporarily collect freshwater. \\n\\nLakes are not specifically defined in this text, but ponds are distinguished from them as being *smaller* in size.\\n'], dtype='object', name='definition')"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "definitions"
    ]
   },
   {
@@ -814,26 +728,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "matches"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -842,17 +736,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fname = \"../extraction/data/pond_screening4.csv\"\n",
+    "fname = \"../extraction/data/coastal/screening.csv\"\n",
     "df = pd.read_csv(fname, index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -881,6 +775,7 @@
        "      <th>abstract_bool</th>\n",
        "      <th>definition_bool</th>\n",
        "      <th>table_bool</th>\n",
+       "      <th>definition</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -888,41 +783,46 @@
        "      <th>0</th>\n",
        "      <td>10.1002/lno.12769</td>\n",
        "      <td>-1</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10.1002/lno.12769</td>\n",
+       "      <td>10.1002/lno.70071</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10.1002/lno.12802</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.1002/lno.12802</td>\n",
        "      <td>0</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10.1002/lno.12769</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10.1002/lno.12769</td>\n",
-       "      <td>2</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10.1002/lno.12769</td>\n",
-       "      <td>3</td>\n",
-       "      <td>True</td>\n",
+       "      <td>10.1002/lno.12812</td>\n",
+       "      <td>-1</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -931,70 +831,89 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>467</th>\n",
-       "      <td>10.1002/lno.70044</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>468</th>\n",
-       "      <td>10.1002/lno.12754</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>469</th>\n",
-       "      <td>10.1002/lno.12754</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>470</th>\n",
-       "      <td>10.1002/lno.70005</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>471</th>\n",
+       "      <th>925</th>\n",
        "      <td>10.1002/lno.70072</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>926</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>5</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>928</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>7</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>929</th>\n",
+       "      <td>10.1002/lno.70072</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>472 rows × 5 columns</p>\n",
+       "<p>930 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   doi  chunk  abstract_bool definition_bool table_bool\n",
-       "0    10.1002/lno.12769     -1           True             NaN        NaN\n",
-       "1    10.1002/lno.12769      0           True           False      False\n",
-       "2    10.1002/lno.12769      1           True           False      False\n",
-       "3    10.1002/lno.12769      2           True           False      False\n",
-       "4    10.1002/lno.12769      3           True           False      False\n",
-       "..                 ...    ...            ...             ...        ...\n",
-       "467  10.1002/lno.70044      0           True           False      False\n",
-       "468  10.1002/lno.12754     -1           True             NaN        NaN\n",
-       "469  10.1002/lno.12754      0           True           False      False\n",
-       "470  10.1002/lno.70005     -1          False             NaN        NaN\n",
-       "471  10.1002/lno.70072     -1          False             NaN        NaN\n",
+       "                   doi  chunk  abstract_bool definition_bool table_bool  \\\n",
+       "0    10.1002/lno.12769     -1          False             NaN        NaN   \n",
+       "1    10.1002/lno.70071     -1          False             NaN        NaN   \n",
+       "2    10.1002/lno.12802     -1           True             NaN        NaN   \n",
+       "3    10.1002/lno.12802      0           True           False      False   \n",
+       "4    10.1002/lno.12812     -1          False             NaN        NaN   \n",
+       "..                 ...    ...            ...             ...        ...   \n",
+       "925  10.1002/lno.70072      4           True           False       True   \n",
+       "926  10.1002/lno.70072      5           True           False       True   \n",
+       "927  10.1002/lno.70072      6           True           False       True   \n",
+       "928  10.1002/lno.70072      7           True           False       True   \n",
+       "929  10.1002/lno.70072      8           True           False      False   \n",
        "\n",
-       "[472 rows x 5 columns]"
+       "    definition  \n",
+       "0          NaN  \n",
+       "1          NaN  \n",
+       "2          NaN  \n",
+       "3          NaN  \n",
+       "4          NaN  \n",
+       "..         ...  \n",
+       "925        NaN  \n",
+       "926        NaN  \n",
+       "927        NaN  \n",
+       "928        NaN  \n",
+       "929        NaN  \n",
+       "\n",
+       "[930 rows x 6 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,19 +924,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "abstract_bool\n",
-       "True     377\n",
-       "False     95\n",
+       "True     873\n",
+       "False     57\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,18 +947,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "definition_bool\n",
-       "False    338\n",
+       "False    670\n",
+       "True     126\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,19 +970,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "table_bool\n",
-       "False    321\n",
-       "True      17\n",
+       "False    591\n",
+       "True     205\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,24 +993,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['10.1002/lno.70020', '10.1002/lno.12767', '10.1002/lno.70095',\n",
-       "       '10.1002/lno.12788', '10.1002/lno.70053', '10.1002/lno.70064'],\n",
+       "Index(['10.1002/lno.70056', '10.1002/lno.70046', '10.1002/lno.12730',\n",
+       "       '10.1002/lno.12725', '10.1002/lno.12757', '10.1002/lno.70060',\n",
+       "       '10.1002/lno.70014', '10.1002/lno.12786', '10.1002/lno.12742',\n",
+       "       '10.1002/lno.12795', '10.1002/lno.12771', '10.1002/lno.70024',\n",
+       "       '10.1002/lno.12761', '10.1002/lno.12714', '10.1002/lno.12781',\n",
+       "       '10.1002/lno.70045', '10.1002/lno.70089', '10.1002/lno.12800',\n",
+       "       '10.1002/lno.70006', '10.1002/lno.12739', '10.1002/lno.12803',\n",
+       "       '10.1002/lno.12772', '10.1002/lno.70062', '10.1002/lno.70025',\n",
+       "       '10.1002/lno.70072', '10.1002/lno.12734', '10.1002/lno.12811',\n",
+       "       '10.1002/lno.12762', '10.1002/lno.70088', '10.1002/lno.70080',\n",
+       "       '10.1002/lno.70021', '10.1002/lno.70083', '10.1002/lno.12724',\n",
+       "       '10.1002/lno.12809', '10.1002/lno.70087', '10.1002/lno.12794',\n",
+       "       '10.1002/lno.12810', '10.1002/lno.12715', '10.1002/lno.12765',\n",
+       "       '10.1002/lno.70039', '10.1002/lno.70019', '10.1002/lno.70048',\n",
+       "       '10.1002/lno.70050', '10.1002/lno.70012', '10.1002/lno.70085',\n",
+       "       '10.1002/lno.12743', '10.1002/lno.70042', '10.1002/lno.12749',\n",
+       "       '10.1002/lno.70033', '10.1002/lno.12759', '10.1002/lno.12748',\n",
+       "       '10.1002/lno.12750', '10.1002/lno.12733'],\n",
        "      dtype='object', name='doi')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.loc[df.table_bool == True].doi.value_counts().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following coastal ecosystems are studied in this context, with their defining characteristics as described in the text:\n",
+      "\n",
+      "*   **Reefs:** Specifically, reefs occurring on the **Rottnest Continental Shelf**, with a distinction made between **inner shelf reefs** (8 individuals m-2) and **outer shelf reefs** (projected to comprise one-third of total reefs between 0 and 60m depth, experience lower light conditions).\n",
+      "*   **Kelp Forests:** Specifically, forests dominated by the Australian kelp, *E. radiata*.\n",
+      "*   **Coastal Environments experiencing Downwelling Shelf Waves and Currents (DSWT):** These are characterized by the presence of cross-shelf currents (typical velocities of 0.15 m s-1 along the seafloor) and are suggested to have higher potential for POC carbon export to deep ocean sinks.\n",
+      "*   **Shallow Reefs (10-30m depth):** These are described as potentially having similar to and potentially greater macroalgal carbon sequestration rates than national estimates.\n",
+      "* **Deep reefs:** located on the outer shelf, experience lower light conditions and may be important contributors to macroalgal export to the deep ocean.\n",
+      "\n",
+      "\n",
+      "\n",
+      "</start_of_turn>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[df.definition_bool == True].definition.iloc[4])"
    ]
   }
  ],
